--- a/naqd_project/app1/templates/main.html
+++ b/naqd_project/app1/templates/main.html
@@ -9,10 +9,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
 
     <style>
       .logo img {
@@ -114,7 +113,6 @@
             </li>
           </ul>
           <hr />
-
         </div>
 
         <!-- Main content -->
@@ -135,7 +133,7 @@
       aria-labelledby="customerModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" >
+      <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="customerModalLabel">Select Customer</h5>
@@ -546,28 +544,34 @@
             });
         });
 
-
-        document.getElementById("debts-link").addEventListener("click", function() {
+      document
+        .getElementById("debts-link")
+        .addEventListener("click", function () {
           loaddebtspage();
         });
 
       //View_Debts_by_Fetch
-     function loaddebtspage () {
-          fetch("/api/debts/")
-            .then((response) => response.json())
-            .then((data) => {
-              let content = '<table class="table table-striped">';
-              content +=
-                "<thead><tr><th>ID</th><th>Amount</th><th>Status</th><th>Customer</th><th>Actions</th></tr></thead><tbody>";
-              add_button =
-                '<button type="button" class="btn btn-primary btn-lg active" data-bs-toggle="modal"  data-bs-target="#customerModal" data-id="${debt.id}">  Add Debts  </button>';
-              // ' <a href="/add_debts" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Add Debts</a>'
+      function loaddebtspage() {
+        fetch("/api/debts/")
+          .then((response) => response.json())
+          .then((data) => {
+            let content = '<table class="table table-striped">';
+            content +=
+              "<thead><tr><th>ID</th><th>Amount</th><th>Status</th><th>Customer</th><th>Actions</th></tr></thead><tbody>";
+            add_button =
+              '<button type="button" class="btn btn-primary btn-lg active" data-bs-toggle="modal"  data-bs-target="#customerModal" data-id="${debt.id}">  Add Debts  </button>';
+            // ' <a href="/add_debts" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Add Debts</a>'
 
-              data.forEach((debt, index) => {
-                content += `<tr>
+            data.forEach((debt, index) => {
+              content += `<tr>
                     <td>${index + 1}</td>
                     <td>${debt.amount_debt}</td>
-                    <td>${debt.status_debt ? "Paid" : "Unpaid"}</td>
+                    <td>
+  <span style="padding: 5px 10px; border-radius: 5px; color: white;"
+        class="${debt.status_debt ? "bg-success" : "bg-danger"}">
+    ${debt.status_debt ? "Paid" : "Unpaid"}
+  </span>
+</td>
                     <td>${debt.customer_name}</td>
                     <td>
                         <div class="actions">
@@ -588,13 +592,12 @@
                         </div>
                     </td>
                 </tr>`;
-              });
-              content += "</tbody></table>";
-              document.getElementById("content").innerHTML =
-                add_button + content;
-              document.getElementById("head_title").textContent = "Debts";
             });
-        }
+            content += "</tbody></table>";
+            document.getElementById("content").innerHTML = add_button + content;
+            document.getElementById("head_title").textContent = "Debts";
+          });
+      }
 
       //View_Payments_by_Fetch
       document
@@ -648,98 +651,100 @@
         });
 
       //View_Dashboard_by_Fetch
-      document.addEventListener('DOMContentLoaded', function() {
+      document.addEventListener("DOMContentLoaded", function () {
         // تنفيذ الكود تلقائيًا عند تحميل الصفحة
         loadDashboard();
-        
+
         // ربط الزر ليعرض الـ Dashboard عند النقر عليه
-        document.getElementById("dashboard_page").addEventListener("click", function() {
-          loadDashboard();
-        });
+        document
+          .getElementById("dashboard_page")
+          .addEventListener("click", function () {
+            loadDashboard();
+          });
       });
-      
+
       function loadDashboard() {
-            const content = document.getElementById("content");
-            if (!content) {
-              alert("المحتوى غير موجود!");
-              return;
-            }
-            content.innerHTML = "";
-            const gridContainer = document.createElement("div");
-            gridContainer.id = "grid-container";
-            content.appendChild(gridContainer);
+        const content = document.getElementById("content");
+        if (!content) {
+          alert("المحتوى غير موجود!");
+          return;
+        }
+        content.innerHTML = "";
+        const gridContainer = document.createElement("div");
+        gridContainer.id = "grid-container";
+        content.appendChild(gridContainer);
 
-            for (let i = 1; i <= 2; i++) {
-              const chartContainer = document.createElement("div");
-              chartContainer.className = "chart-box";
-              const chartCanvas = document.createElement("canvas");
-              chartCanvas.id = `chart${i}`;
-              chartContainer.appendChild(chartCanvas);
-              gridContainer.appendChild(chartContainer);
-              document.getElementById("head_title").textContent = "Dashboard";
-              chart_label = ["Debts Chart", "Payment Chart"];
+        for (let i = 1; i <= 2; i++) {
+          const chartContainer = document.createElement("div");
+          chartContainer.className = "chart-box";
+          const chartCanvas = document.createElement("canvas");
+          chartCanvas.id = `chart${i}`;
+          chartContainer.appendChild(chartCanvas);
+          gridContainer.appendChild(chartContainer);
+          document.getElementById("head_title").textContent = "Dashboard";
+          chart_label = ["Debts Chart", "Payment Chart"];
 
-              fetch(`/chart-data-${i}/`)
-                .then((response) => {
-                  if (!response.ok) {
-                    throw new Error("فشل في جلب البيانات من الخادم!");
-                  }
-                  return response.json();
-                })
-                .then((data) => {
-                  const ctx = chartCanvas.getContext("2d");
-                  window[`myChart${i}`] = new Chart(ctx, {
-                    type: i % 2 === 0 ? "doughnut" : "bar", // تبديل النوع بين خطي وعمودي
-                    data: {
-                      labels: data.labels,
-                      datasets: [
-                        {
-                          label: chart_label[i - 1],
-                          data: data.values,
-                          backgroundColor: ["red", "blue", "green", "yellow"],
-                        },
-                      ],
+          fetch(`/chart-data-${i}/`)
+            .then((response) => {
+              if (!response.ok) {
+                throw new Error("فشل في جلب البيانات من الخادم!");
+              }
+              return response.json();
+            })
+            .then((data) => {
+              const ctx = chartCanvas.getContext("2d");
+              window[`myChart${i}`] = new Chart(ctx, {
+                type: i % 2 === 0 ? "doughnut" : "bar", // تبديل النوع بين خطي وعمودي
+                data: {
+                  labels: data.labels,
+                  datasets: [
+                    {
+                      label: chart_label[i - 1],
+                      data: data.values,
+                      backgroundColor: ["red", "blue", "green", "yellow"],
                     },
-                    options: {
-                      responsive: true,
-                      maintainAspectRatio: false, // السماح بتعديل الحجم
-                      aspectRatio: i === 2 ? 1 : 2, // تصغير الحجم للرسم البياني الثاني
-                      plugins: {
-                        title: {
-                          display: i === 2,
-                          text: i === 1 ? "Debts Chart" : "Payment Chart",
-                          font: {
-                            size: 18,
-                            weight: "bold",
-                          },
-                          padding: {
-                            top: 20,
-                          },
-                        },
+                  ],
+                },
+                options: {
+                  responsive: true,
+                  maintainAspectRatio: false, // السماح بتعديل الحجم
+                  aspectRatio: i === 2 ? 1 : 2, // تصغير الحجم للرسم البياني الثاني
+                  plugins: {
+                    title: {
+                      display: i === 2,
+                      text: i === 1 ? "Debts Chart" : "Payment Chart",
+                      font: {
+                        size: 18,
+                        weight: "bold",
+                      },
+                      padding: {
+                        top: 20,
                       },
                     },
-                  });
-                })
-                .catch((error) => {
-                  console.error("خطأ:", error);
-                  alert(`حدث خطأ أثناء تحميل بيانات الرسم البياني ${i}!`);
-                });
-            }
-            const tableContainer = document.createElement("div");
-            tableContainer.className = "table-responsive mt-4 chart-box";
+                  },
+                },
+              });
+            })
+            .catch((error) => {
+              console.error("خطأ:", error);
+              alert(`حدث خطأ أثناء تحميل بيانات الرسم البياني ${i}!`);
+            });
+        }
+        const tableContainer = document.createElement("div");
+        tableContainer.className = "table-responsive mt-4 chart-box";
 
-            const tableTitle = document.createElement("h4");
-            tableTitle.className = "mb-3";
-            tableTitle.textContent = "Latest Customers";
-            tableTitle.style.textAlign = "center";
+        const tableTitle = document.createElement("h4");
+        tableTitle.className = "mb-3";
+        tableTitle.textContent = "Latest Customers";
+        tableTitle.style.textAlign = "center";
 
-            tableTitle.style.padding = "10px";
+        tableTitle.style.padding = "10px";
 
-            tableContainer.appendChild(tableTitle);
+        tableContainer.appendChild(tableTitle);
 
-            const table = document.createElement("table");
-            table.className = "table table-striped table-bordered "; // تنسيق الجدول باستخدام فئات Bootstrap
-            table.innerHTML = `
+        const table = document.createElement("table");
+        table.className = "table table-striped table-bordered "; // تنسيق الجدول باستخدام فئات Bootstrap
+        table.innerHTML = `
               <thead class="thead-dark">
                 <tr>
                   <th>Customer ID</th>
@@ -752,38 +757,35 @@
               </tbody>
               
             `;
-            tableContainer.appendChild(table);
-            gridContainer.appendChild(tableContainer);
+        tableContainer.appendChild(table);
+        gridContainer.appendChild(tableContainer);
 
-            fetch("/latest-customers/")
-              .then((response) => {
-                if (!response.ok) {
-                  throw new Error("فشل في جلب بيانات الزبائن!");
-                }
-                return response.json();
-              })
-              .then((customers) => {
-                const tableBody = document.getElementById(
-                  "customers-table-body"
-                );
-                customers.forEach((customer, index) => {
-                  const row = document.createElement("tr");
-                  row.innerHTML = `
+        fetch("/latest-customers/")
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("فشل في جلب بيانات الزبائن!");
+            }
+            return response.json();
+          })
+          .then((customers) => {
+            const tableBody = document.getElementById("customers-table-body");
+            customers.forEach((customer, index) => {
+              const row = document.createElement("tr");
+              row.innerHTML = `
                     <td>${index + 1}</td>
                     <td>${customer.name}</td>
                     <td>${customer.mobile}</td>
                     <td>${customer.created_at}</td>
                     
                   `;
-                  tableBody.appendChild(row);
-                });
-              })
-              .catch((error) => {
-                console.error("خطأ في جلب بيانات الزبائن:", error);
-                alert("حدث خطأ أثناء تحميل بيانات الزبائن!");
-              });
- 
-        }
+              tableBody.appendChild(row);
+            });
+          })
+          .catch((error) => {
+            console.error("خطأ في جلب بيانات الزبائن:", error);
+            alert("حدث خطأ أثناء تحميل بيانات الزبائن!");
+          });
+      }
 
       //Fetch_customer_in_debt_page
       document.addEventListener("DOMContentLoaded", function () {
@@ -874,8 +876,6 @@
             });
         });
 
-        
-
       //add_debts_by_modal
       document
         .querySelector("#add_debts")
@@ -958,7 +958,7 @@
             })
             .catch((error) => {
               console.error("Error adding payment:", error);
-              alert("Failed to add payment!"+ error.message);
+              alert("Failed to add payment!" + error.message);
             });
         });
 
@@ -1068,73 +1068,75 @@
           });
       }
 
-      document.querySelectorAll('[data-bs-target="#editCustomerModal"]').forEach(button => {
-        button.addEventListener('click', function () {
-            const customerId = this.getAttribute('data-id');
+      document
+        .querySelectorAll('[data-bs-target="#editCustomerModal"]')
+        .forEach((button) => {
+          button.addEventListener("click", function () {
+            const customerId = this.getAttribute("data-id");
             // جلب بيانات العميل
             fetch(`/api/customers/${customerId}/`)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Customer not found');
-                    }
-                    return response.json();
-                })
-                .then(customer => {
-                    // ملء الفورم بالبيانات
-                    document.getElementById('customerId').value = customer.id;
-                    document.getElementById('firstName').value = customer.first_name;
-                    document.getElementById('secondName').value = customer.second_name;
-                    document.getElementById('email').value = customer.email;
-                    document.getElementById('mobile').value = customer.mobile;
-                })
-                .catch(error => {
-                    console.error('Error fetching customer data:', error);
-                    alert('Failed to fetch customer data.');
-                });
+              .then((response) => {
+                if (!response.ok) {
+                  throw new Error("Customer not found");
+                }
+                return response.json();
+              })
+              .then((customer) => {
+                // ملء الفورم بالبيانات
+                document.getElementById("customerId").value = customer.id;
+                document.getElementById("firstName").value =
+                  customer.first_name;
+                document.getElementById("secondName").value =
+                  customer.second_name;
+                document.getElementById("email").value = customer.email;
+                document.getElementById("mobile").value = customer.mobile;
+              })
+              .catch((error) => {
+                console.error("Error fetching customer data:", error);
+                alert("Failed to fetch customer data.");
+              });
+          });
         });
-    });
 
-    // التعامل مع الفورم عند الإرسال
-    document.getElementById('editCustomerForm').addEventListener('submit', function (event) {
-        event.preventDefault();
-        const customerId = document.getElementById('customerId').value;
-        const formData = {
-            first_name: document.getElementById('firstName').value,
-            second_name: document.getElementById('secondName').value,
-            email: document.getElementById('email').value,
-            mobile: document.getElementById('mobile').value,
-        };
+      // التعامل مع الفورم عند الإرسال
+      document
+        .getElementById("editCustomerForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          const customerId = document.getElementById("customerId").value;
+          const formData = {
+            first_name: document.getElementById("firstName").value,
+            second_name: document.getElementById("secondName").value,
+            email: document.getElementById("email").value,
+            mobile: document.getElementById("mobile").value,
+          };
 
-        // إرسال البيانات إلى الخادم
-        fetch(`/api/customers/${customerId}/`, {
-            method: 'PUT',
+          // إرسال البيانات إلى الخادم
+          fetch(`/api/customers/${customerId}/`, {
+            method: "PUT",
             headers: {
-                'Content-Type': 'application/json',
+              "Content-Type": "application/json",
             },
             body: JSON.stringify(formData),
-        })
-            .then(response => {
-                console.log("Response status:", response.status);
-                if (!response.ok) {
-                    return response.json().then(err => {
-                        console.error("Error response from server:", err);
-                        throw new Error('Failed to update customer');
-                    });
-                }
-                alert('Customer updated successfully!');
-                document.getElementById('customers-link').click();
+          })
+            .then((response) => {
+              console.log("Response status:", response.status);
+              if (!response.ok) {
+                return response.json().then((err) => {
+                  console.error("Error response from server:", err);
+                  throw new Error("Failed to update customer");
+                });
+              }
+              alert("Customer updated successfully!");
+              document.getElementById("customers-link").click();
             })
-            .catch(error => {
-                console.error('Error updating customer:', error);
-                alert('Failed to update customer.');
+            .catch((error) => {
+              console.error("Error updating customer:", error);
+              alert("Failed to update customer.");
             });
-    });
-
-
-
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    
   </body>
 </html>
